# python-suppress

./: Makefile  README.md  setup.cfg  tox.ini
suppress/: __init__.py  __main__.py
