[metadata]
name = python-suppress
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Contains the logic for suppressing and logging exceptions after an expected exception/result is captured.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-suppress
project_urls =
    Documentation = https://github.com/Reyalsorik/python-suppress/README.md
    Source Code = https://github.com/Reyalsorik/python-suppress

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = suppress

[options]
include_package_data = true
